--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,8 @@
   @import url('https://fonts.googleapis.com/css2?family=Anton&family=Baloo+2&family=Libre+Baskerville&family=Noto+Sans&family=Oswald:wght@500&family=Playfair+Display:wght@500&family=Poppins:wght@400;600&family=Roboto+Mono:wght@200&family=Roboto:wght@500&family=Rubik&family=Ubuntu&display=swap');
-
+  @import url('https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik&display=swap');
 
   * {
       margin: 0;
@@ -8,14 +11,24 @@
   }
 
   body {
-      background-color: rgb(1, 1, 22);
-      color: #fff;
-      font-family: 'Poppins', sans-serif;
+      background-color: #fff;
+      color: #000 !important;
+      font-family: 'Poppins', sans-serif !important;
   }
 
   /*==================*/
   /* UTILITY CLASSESS */
   /*==================*/
+
+  ::-moz-selection {
+      color: white;
+      background: black;
+  }
+
+  ::selection {
+      color: black;
+      background: #0000ff4e;
+  }
 
   .display-none {
       display: none;
@@ -39,27 +52,37 @@
   }
 
   h1 {
-      font-family: Poppins, sans-serif;
+      font-family: Poppins, sans-serif !important;
   }
 
-  .bg-white {
-    background-color: #fff;
+  .bg-black {
+      background-color: rgb(1, 1, 22) !important;
   }
 
-  .color-black {
-    color: #000;
+  .color-white {
+      color: #fff !important;
   }
 
-  /*===============*/
+  .purple-black {
+      color: #6565ff;
+      transition: .5s;
+  }
+
+  .purple-black-bg {
+      background-color: #6565ff !important;
+      transition: .5s;
+  }
+
+  /*================*/
   /* HEADER SECTION */
-  /*===============*/
+  /*================*/
 
   nav {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      height: 11vh;
-      background-color: rgb(1, 1, 22);
+      height: 70px;
+      background-color: #fff;
       padding: 0 100px;
       transition: .5s;
   }
@@ -75,7 +98,7 @@
 
   nav ul li a {
       text-decoration: none;
-      color: #fff;
+      color: #000;
       position: relative;
       cursor: pointer;
   }
@@ -101,6 +124,7 @@
   .web-logo {
       font-size: 1.3rem;
       margin-left: 50px;
+      transition: none;
   }
 
   .web-logo:hover {
@@ -116,10 +140,9 @@
       border: 0;
       outline: 0;
       background-color: transparent;
-      color: #fff;
+      color: #000;
       cursor: pointer;
   }
-
 
   /*===============*/
   /* FRONT SECTION */
@@ -127,136 +150,88 @@
 
   .firstSection {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
-      margin: 45px 0;
-      position: relative;
-      height: 60vh;
+      height: 550px;
+      width: 100%;
+      text-align: center;
   }
 
-  .leftSection {
-      font-size: 2.7rem;
-      width: 36%;
+  .big-title {
+      font-size: 4rem;
+      font-family: 'Rubik', sans-serif;
+      font-weight: 800;
+  }
+
+  .purple {
+      color: #3636fe !important;
   }
 
   .button {
-      margin: 20px 0 0 0;
+      margin-top: 20px !important;
   }
 
   .btn {
-      padding: 12px;
-      font-size: 17px;
-      border-radius: 8px;
-      border: 1px solid #000;
-      cursor: pointer;
-      background-color: #9a9afe;
-      color: #000;
-      transition-duration: 0.7s;
+      padding: 10px !important;
+      font-size: 14px !important;
+      border-radius: 8px !important;
+      border: none !important;
+      cursor: pointer !important;
+      background-color: #3636fe;
+      transition-duration: 0.3s !important;
+      border: 1px solid #3636fe !important;
+  }
+
+  .btnhref {
+      color: #fff !important;
   }
 
   .btn:hover {
-      background-color: #fff;
-      color: #000;
-      border: 1px solid #000;
+      background-color: #fff !important;
   }
 
-  .rightSection {
-      width: 30%;
-      height: 100%;
+  .btnhref:hover {
+      color: #000 !important;
   }
 
-  .rightSection img {
-      width: 30vw;
-  }
-
-  .rightSection img:hover {
-      cursor: pointer;
-  }
-
-  .front-img {
-      width: 30vw;
-      position: absolute;
-      top: -10px;
-      right: 120px;
-      animation: imageMoverTopBottom 2s linear 0s infinite;
-  }
-
-  @keyframes imageMoverTopBottom {
-
-      0% {
-          transform: translateY(-10px);
-      }
-
-      50% {
-          transform: translateY(-3px);
-      }
-
-      55% {
-          transform: translateY(-3px);
-      }
-
-      100% {
-          transform: translateY(-10px);
-      }
-  }
-
-
-  .purple {
-      color: #9a9afe;
-  }
-
-  #element {
-      color: #9a9afe;
-  }
-
-  .hr-1 {
-      border: 0;
-      background-color: #6565ff;
-      height: 2px;
-      margin: 50px 84px;
-      border-radius: 70%;
-  }
 
   /*===============*/
   /* ABOUT SECTION */
   /*===============*/
-
-
+  
   .thirdSection {
-      height: 85vh;
-      padding: 0px 150px;
-      margin-top: 0px;
-  }
-
-  .thirdSection h1 {
-      font-size: 1.7rem;
-  }
-
-  .third-flex {
+      height: auto;
       display: flex;
-      justify-content: space-between;
-      background-color: rgba(212, 218, 255, 0.1);
-      padding: 25px 20px;
-      margin-top: 10px;
+      flex-direction: column;
       align-items: center;
-      border-radius: 10px;
+      padding: 0 2rem;
   }
 
-  .third-left {
-      width: 40vw;
-      margin-top: 20px;
-      padding-bottom: 30px;
-      font-family: 'Playfair Display', serif;
-      font-size: 15px;
-      line-height: 1.8;
+  .container-2 {
+      display: flex !important;
+      justify-content: center !important;
   }
 
-  .button-2 {
-      margin-top: 30px;
+  #about-card {
+      background-color: transparent !important;
+      border: none;
   }
 
-  .third-right img {
-      width: 17vw;
+  #about-card h5 {
+      font-size: 2rem !important;
+      color: #000;
+  }
+
+  #about-card-text {
+      line-height: 1.8 !important;
+      font-size: 1rem !important;
+      word-wrap: normal !important;
+      color: #000;
+  }
+
+  .about-img {
+      width: 330px !important;
+      height: 330px !important;
   }
 
   /*================*/
@@ -264,66 +239,24 @@
   /*================*/
 
   .secondSection {
-      max-width: 80vw;
       margin: 50px auto;
+  }
+
+  .bg-primary {
+      background-color: #6565ff !important;
   }
 
   .text-gray {
       color: gray;
-      font-size: 11px;
+      font-size: 10px;
+      display: flex;
+      justify-content: center;
   }
 
   .secondSection h1 {
       font-size: 1.7rem;
-  }
-
-  .secondSkills-container {
-      width: 100%;
-      display: flex;
-      height: 50vh;
-      margin-top: 30px;
-      justify-content: space-around;
-  }
-
-  .secondBox-left {
-      width: 40%;
-      height: 100%;
-      padding: 15px;
-  }
-
-  .secondBox-left-box-1 {
-      background-color: rgba(212, 218, 255, 0.1);
-      padding: 20px;
-      width: 80%;
-      border-radius: 7px;
-      margin-top: 0px;
-      margin-bottom: 10px;
-  }
-
-  .secondBox-left-box-2 {
-      background-color: rgba(212, 218, 255, 0.1);
-      padding: 20px;
-      border-radius: 7px;
-      width: 80%;
-  }
-
-  .second-left-box-p {
-      font-size: 12px;
-      margin-top: 10px;
-  }
-
-  .secondBox-right {
-      width: 50%;
-      height: 100%;
-      padding: 15px;
-
-  }
-
-  .secondBox-right-options {
-      display: flex;
-      width: 82%;
-      justify-content: space-evenly;
-      margin-left: 0px;
+      font-family: Poppins, sans-serif !important;
+      text-align: center;
   }
 
   .hreflink {
@@ -333,7 +266,7 @@
       background-color: transparent;
       border: 0;
       outline: 0;
-      font-family: 'Poppins', sans-serif;
+      font-family: 'Poppins', sans-serif !important;
       border: 2px solid #6565ff;
       color: hsla(0, 0%, 100%, .85);
       padding: 5px 25px;
@@ -352,40 +285,12 @@
       background-color: #6565ff;
   }
 
-  .front-end-detail {
-      width: 100%;
-      padding: 15px;
-      margin-top: 20px;
-      z-index: 50;
-  }
-
-  .skills-container {
-      display: flex;
-      flex-wrap: wrap;
-      flex-flow: wrap;
-  }
-
-  .skill-image {
-      width: 10vw;
-      text-align: center;
-      background-color: white;
-      padding: 5px;
-      margin: 5px;
-      border-radius: 5px;
-      cursor: pointer;
-  }
-
-  .skill-image img {
-      width: 40px;
-      height: 40px;
-  }
-
   .hr-2 {
-      border: 0;
-      background-color: #6565ff;
-      height: 2px;
-      margin: 50px 84px;
-      border-radius: 70%;
+      border: 0 !important;
+      background-color: #3636fe !important;
+      height: 3px !important;
+      margin: 50px 50px !important;
+      border-radius: 70% !important;
   }
 
   /*=================*/
@@ -393,137 +298,54 @@
   /*=================*/
 
   .project-section {
-      padding: 0px 150px;
+      height: auto;
+  }
+
+  .container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
   }
 
   .project-title {
       text-align: center;
-      padding: 0 250px;
-      font-size: 1.5rem;
+      font-size: 1.5rem !important;
   }
 
-  .project-container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-  }
-
-  .project-box-1 {
-      display: flex;
-      justify-content: space-evenly;
-      margin-top: 30px;
-  }
-
-  /* PROJECT 1 */
-
-  .project-1 {
+  .card {
+      background-color: rgba(212, 218, 255, 0.1) !important;
+      color: #000 !important;
       overflow: hidden;
-      border-radius: 15px;
-      transition: all .6s ease;
-      -webkit-filter: blur(0);
-      filter: blur(0);
-      opacity: 1;
-      -webkit-transform: perspective(800px) rotateY(25deg) scale(.8) rotateX(10deg);
-      transform: perspective(800px) rotateY(0deg) translateY(0px) rotateX(0deg) scale(1);
-      border: 2px solid #6565ff;
-      width: 25vw;
-      height: 30vh;
+      border: 1px solid #3b487b !important;
   }
 
-  .project-1:hover {
-      box-shadow: 0 19px 67px -38px hsla(225, 2%, 62%, .8);
-      filter: blur(0.2px);
-      transform: perspective(800px) rotateY(5deg) scale(1) rotateX(5deg);
-      border: 2px solid transparent;
+  .card-text {
+      font-size: .8rem !important;
   }
 
-  .project-imgs {
-      width: 100%;
-      height: 100%;
-      border-radius: 15px;
+  .card-title i {
+      font-size: .8rem;
+      color: #000;
   }
 
-  .project-detail {
-      position: absolute;
-      top: 0;
-      left: 0;
-      bottom: 0;
-      right: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(23, 23, 31, 0.719);
-      color: #fff;
-      transform: translate(-531px, -318px);
-      transition: .5s ease-in-out;
-      opacity: 0;
-      padding: 15px;
-      display: flex;
-      flex-direction: column;
-      border-radius: 15px 15px 300px 15px;
-      justify-content: center;
-  }
-
-  .detail-parent:hover .project-detail {
-      transform: translate(0px, 0px);
-      opacity: 1;
-      border-radius: 15px 15px 15px 15px;
-  }
-
-  .project-desk {
-      margin-top: 10px;
-      font-size: 12px;
+  .card-text i:hover {
+      transform: scale(1.1);
   }
 
   .project-tech {
       margin-top: 15px;
-      font-size: 12px;
+      font-size: 8px;
+      display: flex;
+      flex-wrap: wrap;
   }
 
   .project-tech p {
       background-color: #6565ff;
-      padding: 5px;
-
+      padding: 4px;
+      color: #fff;
   }
 
-
-  /* PROJECT 2 */
-
-  .project-2 {
-      overflow: hidden;
-      border-radius: 15px;
-      transition: all .6s ease;
-      -webkit-filter: blur(0);
-      filter: blur(0);
-      opacity: 1;
-      transform: perspective(800px) rotateY(0deg) scale(1) rotateX(0deg);
-      border: 2px solid #6565ff;
-      width: 25vw;
-      height: 30vh;
-  }
-
-  .project-2:hover {
-      box-shadow: 0 19px 67px -38px hsla(225, 2%, 62%, .8);
-      -webkit-filter: blur(0.2px);
-      filter: blur(0.2px);
-      opacity: 1;
-      transform: perspective(800px) rotateY(-5deg) translateY(0px) rotateX(5deg) scale(1);
-      border: 2px solid transparent;
-
-  }
-
-  #project-2-detail-h1 {
-      font-size: 20px;
-  }
-
-  #edit-project-box-1 {
-      display: flex;
-      justify-content: center;
-  }
-
-  #edit-project-box-1 .project-2 {
-      margin-left: 20px;
-  }
-
+  
   /*=================*/
   /* CONTACT SECTION */
   /*=================*/
@@ -538,8 +360,14 @@
   }
 
   .fifth-title h1 {
-      font-size: 1.7rem;
+      font-size: 1.7rem !important;
       margin-top: -3px;
+      font-family: Poppins, sans-serif !important;
+  }
+
+  #contact-gray {
+    display: flex;
+    justify-content: left;
   }
 
   .fifth-flex {
@@ -556,22 +384,23 @@
 
   .grid-box {
       width: 15vw;
-      height: 25vh;
+      height: 200px;
       margin: 10px 20px 0 0;
       padding: 10px;
       align-self: center;
   }
 
   .grid-box i {
-      font-size: 25px;
+      font-size: 25px !important;
   }
 
   .grid-box h3 {
       margin: 8px 0;
+      font-size: 1.4rem !important;
   }
 
   .grid-box p {
-      font-size: 14px;
+      font-size: 14px !important;
   }
 
   .fifth-right {
@@ -584,7 +413,8 @@
   }
 
   .fifth-right h1 {
-      font-size: 1.7rem;
+      font-size: 1.7rem !important;
+      font-family: Poppins, sans-serif !important;
   }
 
   .fifth-form {
@@ -602,31 +432,33 @@
   .fifth-input {
       padding: 5px;
       padding-left: 15px;
-      width: 25vw;
-      height: 6vh;
+      width: 21vw;
+      height: 40px;
       margin-top: 20px;
       border-radius: 40px;
+      font-size: 12px !important;
   }
 
   .large-input {
-      width: 25vw;
-      height: 15vh;
+      width: 21vw;
+      height: 100px;
       margin-top: 20px;
       padding: 0 0 60px 15px;
       border-radius: 10px;
+      font-size: 12px !important;
   }
 
   .fifth-btn {
       padding: 0px;
-      font-size: 16px;
+      font-size: 12px !important;
       border: 1px solid #000;
       cursor: pointer;
       background-color: #000;
       color: #fff;
       margin-top: 20px;
-      width: 12vw;
-      height: 40px;
-      border-radius: 2px;
+      width: 8vw !important;
+      height: 38px;
+      border-radius: 5px;
       transition-duration: 0.7s;
   }
 
@@ -668,11 +500,13 @@
   .left {
       height: 0;
       font-size: 18px;
+      color: white;
+      font-family: 'Rubik', sans-serif !important;
   }
 
   .links {
       display: flex;
-      margin-top: 50px;
+      margin-top: 45px;
       justify-content: center;
   }
 
