--- a/views/home.ejs
+++ b/views/home.ejs
@@ -35,7 +35,6 @@
 
         </nav>
     </header>
-
     <main>
         <section class="firstSection">
             <div class="leftSection">
@@ -70,7 +69,7 @@
                         <div class="card" id="about-card card-text-white"
                             style="height: auto; border: none !important;">
                             <div class="card-body">
-                                <h5 class="card-title"><b>Special title treatment</b></h5>
+                                <h5 class="card-title about-card-title"><b>Special title treatment</b></h5>
                                 <p class="card-text" id="about-card-text">I’m Nicolò, a husband, software developer,
                                     vegetable grower, part time archer and vintage lens collector.
                                 </p>
@@ -197,12 +196,13 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>Amazon Web Clone <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">Amazon Web Clone <a
                                                     href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"> <i
                                                         class="fa-solid fa-arrow-up-right-from-square git-links"></i></a>
                                         </h5>
                                         </i></a></b></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting
+                                            text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech">
@@ -219,16 +219,16 @@
                         <div class="card mb-3 shadow-sm" style="max-width: 800px;">
                             <div class="row g-0">
                                 <div class="col-md-6">
-                                    <img src="/Image/wordmeaning2pr.png" class="img-fluid rounded-start" alt="..."
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQAxvcbe_N-jJCsDCbnE7o23yYlweyCYhRd3g&usqp=CAU" class="img-fluid rounded-start" alt="..."
                                         style=" height: 100%; width: 100%;">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>WordMeaning App</b> <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">WordMeaning App</b> <a
                                                 href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"><i
                                                     class="fa-solid fa-arrow-up-right-from-square git-links"
                                                     style="font-size: .8rem;"></i></a></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -257,12 +257,12 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>Spotify Music <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">Spotify Music <a
                                                     href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"> <i
                                                         class="fa-solid fa-arrow-up-right-from-square git-links"
                                                         style="font-size: .8rem;"></i></a></h5>
                                         </i></a></b></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -287,12 +287,12 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>Spotify Pages</b> <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">Spotify Pages</b> <a
                                                 href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"> <i
                                                     class="fa-solid fa-arrow-up-right-from-square git-links"
                                                     style="font-size: .8rem;"></i></a></h5>
                                         </i></a></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -317,12 +317,12 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>The Calculator</b> <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">The Calculator</b> <a
                                                 href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"> <i
                                                     class="fa-solid fa-arrow-up-right-from-square git-links"
                                                     style="font-size: .8rem;"></i></a></h5>
                                         </i></a></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -347,12 +347,12 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>Simon Says Game</b> <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">Simon Says Game</b> <a
                                                 href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"> <i
                                                     class="fa-solid fa-arrow-up-right-from-square git-links"
                                                     style="font-size: .8rem;"></i></a></h5>
                                         </i></a></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -380,11 +380,11 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>Flipcart Clone</b> <a href=""> <i
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">Flipcart Clone</b> <a href=""> <i
                                                     class="fa-solid fa-arrow-up-right-from-square git-links"
                                                     style="font-size: .8rem;"></i></a></h5>
                                         </i></a></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -402,17 +402,17 @@
                         <div class="card mb-3 shadow-sm" style="max-width: 800px;">
                             <div class="row g-0">
                                 <div class="col-md-6">
-                                    <img src="/Image/portfoliopr.png" class="img-fluid rounded-start" alt="..."
+                                    <img src="/Image/newportfoliopr.png" class="img-fluid rounded-start" alt="..."
                                         style=" height: 100%; width: 100%;">
                                 </div>
                                 <div class="col-md-6">
                                     <div class="card-body mt-4">
-                                        <h5 class="card-title"><b>Personal Portfolio</b> <a
+                                        <h5 class="card-title project-card-title"><b style="font-weight: 500;">Personal Portfolio</b> <a
                                                 href="https://github.com/Fardeen26/Amazon-Clone#amazon-clone"> <i
                                                     class="fa-solid fa-arrow-up-right-from-square git-links"
                                                     style="font-size: .8rem;"></i></a></h5>
                                         </i></a></h5>
-                                        <p class="card-text mt-3">This is a wider card with supporting text below as a
+                                        <p class="card-text project-card-text mt-3">This is a wider card with supporting text below as a
                                             natural lead-in to
                                             additional content. This content is a little bit longer.</p>
                                         <div class="project-tech display-flex">
@@ -490,13 +490,13 @@
         </section>
 
     </main>
-
+    <hr>
     <footer>
-
+        
         <div class="footer-container">
 
             <div class="footer-box left">
-                Thank's for visit Fardeen's Portfolio
+                Thank You For Visit Fardeen's Portfolio
             </div>
 
             <div class="links">
@@ -528,10 +528,10 @@
                 &copy; www.fardeensportfolio.com | All Rights Reserved
             </div>
 
-            <div class="footer-lang footer-copyright">
+            <!-- <div class="footer-lang footer-copyright">
                 <p><i class="fa-solid fa-earth-americas"></i> India (English)</p>
                 <p class="p2"> &copy; 2023 Portfolio AB</p>
-            </div>
+            </div> -->
         </div>
 
         <model style="width: 400px; height: 300px">
