--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
   @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Anton&family=Rubik&display=swap');
+  @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;500&display=swap');
 
   * {
       margin: 0;
@@ -14,6 +15,7 @@
       background-color: #fff;
       color: #000 !important;
       font-family: 'Poppins', sans-serif !important;
+      background-color: blur;
   }
 
   /*==================*/
@@ -73,6 +75,11 @@
       transition: .5s;
   }
 
+  .h3 {
+    font-family: 'Oswald', sans-serif !important;
+    font-size: 2.1rem !important;
+  }
+
   /*================*/
   /* HEADER SECTION */
   /*================*/
@@ -89,11 +96,13 @@
 
   nav ul {
       display: flex;
+      margin-bottom: 0 !important;
   }
 
   nav ul li {
       list-style: none;
       padding: 0 20px;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   nav ul li a {
@@ -122,9 +131,10 @@
   }
 
   .web-logo {
-      font-size: 1.3rem;
+      font-size: 1.4rem;
       margin-left: 50px;
       transition: none;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   .web-logo:hover {
@@ -134,6 +144,8 @@
 
   .light-dark-btn-parent {
       width: 5vw;
+      filter: drop-shadow(0px 0px 5px white);
+      transition: .5s;
   }
 
   .light-dark-btn {
@@ -143,6 +155,7 @@
       color: #000;
       cursor: pointer;
   }
+
 
   /*===============*/
   /* FRONT SECTION */
@@ -161,6 +174,8 @@
       font-size: 4rem;
       font-family: 'Rubik', sans-serif;
       font-weight: 800;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
+      letter-spacing: 2px;
   }
 
   .purple {
@@ -168,18 +183,20 @@
   }
 
   .button {
-      margin-top: 20px !important;
+      margin-top: 30px !important;
   }
 
   .btn {
-      padding: 10px !important;
-      font-size: 14px !important;
+      padding: 8px 10px 10px 10px !important;
+      font-size: 13px !important;
       border-radius: 8px !important;
       border: none !important;
       cursor: pointer !important;
       background-color: #3636fe;
       transition-duration: 0.3s !important;
       border: 1px solid #3636fe !important;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
+      letter-spacing: .5px !important;
   }
 
   .btnhref {
@@ -223,10 +240,16 @@
   }
 
   #about-card-text {
-      line-height: 1.8 !important;
-      font-size: 1rem !important;
+      line-height: 1.5 !important;
+      font-size: 1.05rem !important;
       word-wrap: normal !important;
       color: #000;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
+  }
+
+  .about-card-title {
+    font-family: 'Oswald', sans-serif !important; /*oswald font*/
+    font-size: 1.5rem !important;
   }
 
   .about-img {
@@ -251,11 +274,12 @@
       font-size: 10px;
       display: flex;
       justify-content: center;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   .secondSection h1 {
       font-size: 1.7rem;
-      font-family: Poppins, sans-serif !important;
+      /* font-family: Poppins, sans-serif !important; */
       text-align: center;
   }
 
@@ -283,6 +307,10 @@
 
   .active {
       background-color: #6565ff;
+  }
+
+  .progress-bar {
+    font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   .hr-2 {
@@ -316,9 +344,18 @@
       background-color: rgba(212, 218, 255, 0.1) !important;
       color: #000 !important;
       overflow: hidden;
-      border: 1px solid #3b487b !important;
+      /* border: 1px solid #3b487b !important; */
   }
 
+  .project-card-title {
+    font-family: 'Oswald', sans-serif !important; /*oswald font*/
+    letter-spacing: .5px !important;
+    font-weight: 400 !important;
+  }
+
+  .project-card-text {
+    font-family: 'Oswald', sans-serif !important; /*oswald font*/
+  }
   .card-text {
       font-size: .8rem !important;
   }
@@ -362,7 +399,7 @@
   .fifth-title h1 {
       font-size: 1.7rem !important;
       margin-top: -3px;
-      font-family: Poppins, sans-serif !important;
+      /* font-family: Poppins, sans-serif !important; */
   }
 
   #contact-gray {
@@ -380,6 +417,7 @@
       margin-top: 20px;
       display: grid;
       grid-template-columns: auto auto;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/   
   }
 
   .grid-box {
@@ -414,7 +452,8 @@
 
   .fifth-right h1 {
       font-size: 1.7rem !important;
-      font-family: Poppins, sans-serif !important;
+      /* font-family: Poppins, sans-serif !important; */
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   .fifth-form {
@@ -437,6 +476,7 @@
       margin-top: 20px;
       border-radius: 40px;
       font-size: 12px !important;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   .large-input {
@@ -446,6 +486,7 @@
       padding: 10px 0 60px 15px;
       border-radius: 10px;
       font-size: 12px !important;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
 
   .fifth-btn {
@@ -460,6 +501,8 @@
       height: 38px;
       border-radius: 5px;
       transition-duration: 0.7s;
+      font-family: 'Oswald', sans-serif !important; /*oswald font*/
+      letter-spacing: 1px !important;
   }
 
   .fifth-btn:hover {
@@ -473,8 +516,8 @@
   /*========*/
 
   footer {
-      background-color: rgb(0, 0, 0);
-      padding: 50px 30px;
+      padding: 20px 30px 40px 30px;
+      /* margin-top: 50px; */
   }
 
   .footer-container {
@@ -488,7 +531,7 @@
 
   .footer-container ul li a {
       text-decoration: none;
-      color: #fff;
+      /* color: #fff; */
   }
 
   .footer-gray {
@@ -499,9 +542,8 @@
 
   .left {
       height: 0;
-      font-size: 18px;
-      color: white;
-      font-family: 'Rubik', sans-serif !important;
+      font-size: 1.5rem;
+      font-family: 'Oswald', sans-serif !important;
   }
 
   .links {
@@ -515,8 +557,8 @@
   }
 
   .links a {
-      color: #fff;
-      font-size: 10px;
+      font-size: 12px;
+      color: black !important;
   }
 
   .links a i:hover {
@@ -524,21 +566,26 @@
   }
 
   .footer-box2 {
-      margin-top: 70px;
+      margin-top: 50px;
       display: flex;
-      justify-content: space-around;
+      /* justify-content: space-around; */
+      justify-content: center;
   }
 
   .footer-rights {
       color: gray;
-      font-size: 12px;
+      font-size: 11px;
   }
 
   .footer-lang {
       color: gray;
-      font-size: 12px;
+      font-size: 11px;
   }
 
   .footer-lang .p2 {
       margin-top: 10px;
+  }
+
+  .footer-copyright {
+    font-family: 'Oswald', sans-serif !important; /*oswald font*/
   }
