--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -9,11 +9,11 @@
 <body>
 
     <div class="contact-page">
-    Thank you for your message.
+    <%= message %>
     <form method="get" action="/home">
         <button class="btnhref">Go Back</button>
     </form>
-    
+
 </div>
 </body>
 </html>
