--- a/views/home.ejs
+++ b/views/home.ejs
@@ -486,8 +486,9 @@
                     <h1>Get In Touch</h1>
 
                     <form method="post" action="/home/contact" class="fifth-form">
-
-                        <input type="name" name="name" class="fifth-input" placeholder="Your Name"><br>
+                        <div class="">
+                            <input type="name" name="name" class="fifth-input" placeholder="Your Name"><br>
+                        </div>
                         <input type="email" name="email" class="fifth-input" placeholder="Your Email"><br>
                         <textarea name="message" id="" cols="30" rows="10" class="large-input"
                             placeholder="Your Message"></textarea><br>
