--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="/media.css">
     <link rel="stylesheet" href="https://kit.fontawesome.com/8c66f5b16b.css" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/8c66f5b16b.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="https://i.pinimg.com/550x/9e/11/67/9e116714a33851fbadeb9f3dbef7fcdd.jpg">
+    <link rel="icon" href="../Image/bluetopbg.jpg">
 </head>
 
 <body>
